<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sergy.proyectointegrador.MainActivity$PlaceholderFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/P_Origen"
        android:layout_alignRight="@+id/P_Origen"
        android:layout_alignEnd="@+id/P_Origen"
        android:layout_marginTop="14dp"
        android:id="@+id/P_Destino"
        android:hint="@string/TabPublicar_destino" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/P_Hora"
        android:hint="@string/TabPublicar_hora"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/P_Fecha"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/TabPublicar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/P_Publicar"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/P_Precio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:id="@+id/P_Origen"
        android:hint="@string/TabPublicar_origen"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_marginTop="13dp"
        android:id="@+id/P_Fecha"
        android:hint="@string/TabPublicar_fecha"
        android:layout_below="@+id/P_Destino"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="14dp"
        android:id="@+id/P_Precio"
        android:hint="precio"
        android:layout_below="@+id/P_Hora"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
