<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_loggin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sergy.proyectointegrador.Loggin"
    android:background="@drawable/fondo">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:background="@color/fondoTransparente"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/loggin_email"
            android:textColorHint="@color/blancoTransparente"
            android:hint="@string/email"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/loggin_pass"
            android:textColorHint="@color/blancoTransparente"
            android:hint="@string/pass"
            android:layout_marginTop="0dp"
            android:layout_below="@+id/loggin_email"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>

        <Button
            android:text="@string/loggin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loggin_loggin"
            android:onClick="loggin_button"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_below="@+id/loggin_pass"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="Registrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loggin_loggin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:id="@+id/loggin_register"
            android:textColor="@android:color/white"
            android:onClick="register_button"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="5dp" />
    </LinearLayout>

</RelativeLayout>
